Touchpad zoom and scroll gester using touchpad stopped working on Lenovo Thinkpad Laptop E520 #42420

Closed
opened 2014-10-28 01:16:42 +01:00 by Mark McGahee · 13 comments

System Information
Lenovo thinkpad E520 (Edge laptop)
Windows 7 sp1
Graphics card: Intel HD Graphics 3000

Blender Version
Broken in: 2.72b 9e963ae. Tested 2.72 (initial release) & is also broken.
Worked: (optional)
Confirmed that it currently works in 2.71, 2.70a, 2.69 and 2.68a on the same laptop.

Short description of error
Scrolling panels (e.g. Properties Panel) with touchpad gesture (simulated Mouse wheel) does not work (no movement).
Zooming using the the same touchpad gesture does not work. It will intermittently zoom in a small amount then stop working

Note that I can still scroll by grabbing the scroll bars and I can zoom with Ctrl-middlebutton without problems.

Exact steps for others to reproduce the error
On Thinkpad E520 laptop make sure touchpad is set up with the mouse wheel gesture (for me it is a two-finger swipe down or up).
Run blender 2.72, or 2.72b .. Go to 3d View then attempt to zoom with "mouse wheel" gesture.

Go to Properties panel; adjust size to make scroll bar appear; Use "mouse wheel" gesture.

**System Information** Lenovo thinkpad E520 (Edge laptop) Windows 7 sp1 Graphics card: Intel HD Graphics 3000 **Blender Version** Broken in: 2.72b 9e963ae. Tested 2.72 (initial release) & is also broken. Worked: (optional) Confirmed that it currently works in 2.71, 2.70a, 2.69 and 2.68a on the same laptop. **Short description of error** Scrolling panels (e.g. Properties Panel) with touchpad gesture (simulated Mouse wheel) does not work (no movement). Zooming using the the same touchpad gesture does not work. It will intermittently zoom in a small amount then stop working Note that I can still scroll by grabbing the scroll bars and I can zoom with Ctrl-middlebutton without problems. **Exact steps for others to reproduce the error** On Thinkpad E520 laptop make sure touchpad is set up with the mouse wheel gesture (for me it is a two-finger swipe down or up). Run blender 2.72, or 2.72b .. Go to 3d View then attempt to zoom with "mouse wheel" gesture. Go to Properties panel; adjust size to make scroll bar appear; Use "mouse wheel" gesture.
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @MarkMcGahee

Added subscriber: @MarkMcGahee

Added subscriber: @mont29

Added subscriber: @mont29

Well, I do not think any Blender dev has this specific hardware available to test so… First of all, please:

  • Ensure both your OS and drivers are fully up-to-date;
  • Try to start Blender in factory settings (--factory-startup commandline option).
  • Try to tweak OGL settings in UserPreferences, System tab.
  • Try to place this dll next to your blender.exe (software OGL, will be slow, but will show whether this is a driver issue or not).

Otherwise, we won’t be really able to help, we can’t do much about a bug we cannot reproduce ourselves.

Well, I do not think any Blender dev has this specific hardware available to test so… First of all, please: * Ensure both your OS and drivers are fully up-to-date; * Try to start Blender in factory settings (`--factory-startup` commandline option). * Try to tweak OGL settings in UserPreferences, System tab. * Try to place [this dll](http://download.blender.org/ftp/sergey/softwaregl/win64/opengl32.dll) next to your blender.exe (software OGL, will be slow, but will show whether this is a driver issue or not). Otherwise, we won’t be really able to help, we can’t do much about a bug we cannot reproduce ourselves.
Author

Thanks for the diagnostic help.

I updated the gfx and touchpad drivers when I first encountered this. None of the opengl draw, selection or other checkboxes made any difference. Factory settings start up did not change the behavior. Neither did running it with with opengl32.dll in the directory with blender.exe, Other than slowing the update rate of the screen as you predicted, it did not change mousewheel behavior.

New Info:

  • I unzipped and ran blender 2.72a with factory settings and it also shows the same problem.
  • When I perform the mousewheel gesture the system console spits out the following message from 3 to 10 times:
  "<!> event has invalid window"
  Did a lot of zooming and panning without the mousewheel, but this didn't produce the same error message. 
  Checked 2.71 console (where the mousewheel works) and the mousewheel did not produce the message.
    • attached console output using opengl32.dll and factory settings.
{F121883}
  • Looked at #40717 -- a workarouund for another laptop touchpad issue that was included starting with 2.72. It might be the trigger for the error message. It appears to be the only change to the mousewheel handling applied for 2.72, The change for that fix appears harmless otherwise, but I would like to see if removing the #40717 workaround corrects my problem.
Thanks for the diagnostic help. I updated the gfx and touchpad drivers when I first encountered this. None of the opengl draw, selection or other checkboxes made any difference. Factory settings start up did not change the behavior. Neither did running it with with opengl32.dll in the directory with blender.exe, Other than slowing the update rate of the screen as you predicted, it did not change mousewheel behavior. New Info: - I unzipped and ran blender 2.72a with factory settings and it also shows the same problem. - When I perform the mousewheel gesture the system console spits out the following message from 3 to 10 times: ``` "<!> event has invalid window" Did a lot of zooming and panning without the mousewheel, but this didn't produce the same error message. Checked 2.71 console (where the mousewheel works) and the mousewheel did not produce the message. ``` - * attached console output using opengl32.dll and factory settings. ``` {F121883} ``` - Looked at #40717 -- a workarouund for another laptop touchpad issue that was included starting with 2.72. It might be the trigger for the error message. It appears to be the only change to the mousewheel handling applied for 2.72, The change for that fix appears harmless otherwise, but I would like to see if removing the #40717 workaround corrects my problem.

Added subscriber: @Sergey

Added subscriber: @Sergey

thanks for the feedback.

Sergey, you handled #40717, any hint here?

thanks for the feedback. Sergey, you handled #40717, any hint here?

Not really, need someone who knows system events in OSX.

Not really, need someone who knows system events in OSX.

Ah, mixed several reports in here sorry. Was looking into some OSX touchpad issues recently..

I don't think that workaround for that particular fix caused the issue, it just sends WM_USER event to a queue to force PeekMessage to trigger and cause window refresh. We don't handle this even, so apart from extra redraw that call does nothing.

More likely the change which was sending a wheel event to a window under the mouse caused this. But it's hard to say for sure unless some of the developers are able to reproduce the issue.

Ah, mixed several reports in here sorry. Was looking into some OSX touchpad issues recently.. I don't think that workaround for that particular fix caused the issue, it just sends WM_USER event to a queue to force PeekMessage to trigger and cause window refresh. We don't handle this even, so apart from extra redraw that call does nothing. More likely the change which was sending a wheel event to a window under the mouse caused this. But it's hard to say for sure unless some of the developers are able to reproduce the issue.
Author

It might be worth considering to try to reproduce this on a laptop that uses a Synaptics driver for the touchpad, whether it is a Lenovo or not.

I have encountered mouse wheel issues on a couple of other programs. Notepad++ 6.5.1 corrected a problem with Synaptics touchpad drivers (scrolling). Since it is open source that code may give some insight in this issue, provided that it is feasible to do so.

It might be worth considering to try to reproduce this on a laptop that uses a Synaptics driver for the touchpad, whether it is a Lenovo or not. I have encountered mouse wheel issues on a couple of other programs. Notepad++ 6.5.1 corrected a problem with Synaptics touchpad drivers (scrolling). Since it is open source that code may give some insight in this issue, provided that it is feasible to do so.

This issue was referenced by e9645806f5

This issue was referenced by e9645806f5638005aede02841eb6da9607558fcb

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit e9645806f5.

Closed by commit e9645806f5.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#42420
No description provided.