Fix T42420: Touchpad zoom and scroll gester using touchpad stopped working

Seems to be an own mistake on using Windows API.